Navigation Bar Z-Index Fix

--- a/front-end/src/components/NavigationBar/NavigationBar.css
+++ b/front-end/src/components/NavigationBar/NavigationBar.css
@@ -1,6 +1,6 @@
 .navigation-bar {
 	position: relative;
-	z-index: 2;
+	z-index: 3;
 	display: inline-block;
 	padding: 24px 12px;
 	width: calc(var(--navbar-width) - (12px * 2));
